--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "portal-vue": "2.1",
+    "vue": "^2.6.14",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
